<resources>
    <string name="app_name">GuardType</string>
    <string name="instructions_title">Instructions</string>
    <string name="step_1_title">Step 1</string>
    <string name="step_1_description">Go to settings</string>
    <string name="step_2_title">Step 2</string>
    <string name="step_2_description">Enable GuardType in the settings</string>
    <string name="step_3_title">Step 3</string>
    <string name="step_3_description">Select keyboards</string>
    <string name="step_4_title">Step 4</string>
    <string name="step_4_description">Choose the GuardType keyboard</string>
    <string name="step_5_title">Step 5</string>
    <string name="step_5_description">Switch to the system keyboard for logging in</string>
    <string name="create_your_account">Create your account!</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="create_a_new_account">Create a new Account</string>
    <string name="enable_guardtype_keyboard">Enable GuardType Keyboard</string>
    <string name="show_statistics">Show Statistics</string>
    <string name="add_words">Add Words</string>
    <string name="remove_words">Remove Words</string>
    <string name="log_out">Log out</string>
    <string name="help">Help</string>
    <string name="welcome_to_guardtype">Welcome to GuardType!</string>
    <string name="enter_the_password">Enter password</string>
    <string name="enter_the_word">Enter word</string>
    <string name="submit">SUBMIT</string>
    <string name="custom_dialog">Custom Dialog</string>
    <string name="login">Login</string>

    <string name="password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="click_here_to_login">Click here to Login</string>
    <string name="please_sign_in_to_continue">Please sign in to continue.</string>
    <string name="create_account">Create Account</string>
</resources>
