<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/instructions_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instructions_title"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="16dp" />

            <!-- Step 1 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_1_title"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingTop="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_1_description"
                android:paddingTop="4dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/step_1_title"
                android:paddingTop="8dp"
                android:src="@drawable/help_step1" />

            <!-- Step 2 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_2_title"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingTop="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_2_description"
                android:paddingTop="4dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/help_step2"
                android:contentDescription="@string/step_2_title"
                android:paddingTop="8dp" />

            <!-- Step 3 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_3_title"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingTop="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_3_description"
                android:paddingTop="4dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/help_step3"
                android:contentDescription="@string/step_3_title"
                android:paddingTop="8dp" />

            <!-- Step 4 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_4_title"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingTop="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_4_description"
                android:paddingTop="4dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/help_step4"
                android:contentDescription="@string/step_4_title"
                android:paddingTop="8dp" />




        </LinearLayout>
    </ScrollView>
    <TextView
        android:id="@+id/back"
        android:layout_width="177dp"
        android:layout_height="64dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:gravity="center"
        android:padding="10dp"
        android:text="Back"
        android:textAppearance="@style/accept"
        app:drawableEndCompat="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollView" />

    <!-- Back Button -->

</androidx.constraintlayout.widget.ConstraintLayout>
