<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/burbankbigcondensed_bold"
        android:text="@string/custom_dialog"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/burbankbigcondensed_bold"
        android:hint="@string/enter_the_password"
        android:inputType="textPassword"
        android:padding="10dp"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/editTextWord"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/burbankbigcondensed_bold"
        android:hint="@string/enter_the_word"
        android:inputType="textPersonName"
        android:padding="10dp" />


    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_bg"
        android:fontFamily="@font/burbankbigcondensed_bold"
        android:text="@string/submit"
        android:textColor="@android:color/white" />

</LinearLayout>
