<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2">

    <TextView
        android:id="@+id/topBg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_bg"
        android:fontFamily="@font/burbankbigcondensed_bold"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <GridLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/topBg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:columnCount="2"
        android:rowCount="3"
        tools:context=".UI_Components.MainActivity">

        <TextView
            android:id="@+id/textView_help"
            android:layout_width="170dp"
            android:layout_height="90dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/help"
            android:textAppearance="@style/accept"
            android:textSize="20sp"
            app:drawableEndCompat="@drawable/ic_help" />

        <TextView
            android:id="@+id/textView_enable_keyboard"
            android:layout_width="170dp"
            android:layout_height="90dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_marginStart="20dp"
            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/enable_guardtype_keyboard"
            android:textAppearance="@style/accept"
            android:textSize="20sp"
            app:drawableEndCompat="@drawable/ic_keyboard" />

        <TextView
            android:id="@+id/textView_show_statistics"
            android:layout_width="170dp"
            android:layout_height="90dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/show_statistics"
            android:textAppearance="@style/accept"
            android:textSize="20sp"
            app:drawableEndCompat="@drawable/ic_statistica" />

        <TextView
            android:id="@+id/textView_add_words"
            android:layout_width="170dp"
            android:layout_height="90dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/add_words"
            android:textAppearance="@style/accept"
            android:textSize="20sp"
            app:drawableEndCompat="@drawable/ic_plus" />

        <TextView
            android:id="@+id/textView_remove_words"
            android:layout_width="170dp"
            android:layout_height="90dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/remove_words"
            android:textAppearance="@style/accept"
            android:textSize="20sp"
            app:drawableEndCompat="@drawable/ic_trush" />

        <TextView
            android:id="@+id/textView_exit"
            android:layout_width="170dp"
            android:layout_height="90dp"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/log_out"
            android:textAppearance="@style/accept"
            android:textSize="20sp"
            app:drawableEndCompat="@drawable/ic_exit" />

    </GridLayout>

</RelativeLayout>
