<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI_Components.ActivitySignup">

    <TextView
        android:id="@+id/topBg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_bg"
        android:fontFamily="@font/burbankbigcondensed_bold"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/innerConstraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBg">


        <TextView
            android:id="@+id/textLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/burbankbigcondensed_bold"
            android:text="@string/create_account"
            android:textSize="35sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textLogin2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/burbankbigcondensed_bold"
            android:text="@string/please_sign_in_to_continue"
            android:textColor="#A7A7A7"
            android:textSize="15sp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/textLogin" />

        <EditText
            android:id="@+id/inputUsername"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:autofillHints=""
            android:background="@drawable/rounded_button"
            android:drawableStart="@drawable/user_icon"
            android:drawablePadding="10dp"
            android:fontFamily="@font/burbankbigcondensed_bold"
            android:gravity="center_vertical"
            android:hint="@string/username"
            android:inputType="text"
            android:maxLength="40"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textLogin2"
            app:layout_constraintWidth_percent="0.9" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:autofillHints=""
            android:background="@drawable/rounded_button"
            android:drawableStart="@drawable/lock_icon"
            android:drawablePadding="10dp"
            android:fontFamily="@font/burbankbigcondensed_bold"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="40"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputEmail"
            app:layout_constraintWidth_percent="0.9" />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rounded_button"
            android:drawableStart="@drawable/email_icon"
            android:drawablePadding="10dp"
            android:fontFamily="@font/burbankbigcondensed_bold"
            android:gravity="center_vertical"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:maxLength="40"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputUsername"
            app:layout_constraintWidth_percent="0.9" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signUp"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/btn_bg"
            android:backgroundTint="#FF4446D6"
            android:drawableEnd="@drawable/baseline_arrow_forward"
            android:fontFamily="@font/burbankbigcondensed_bold"
            android:padding="3dp"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputPassword"
            app:layout_constraintWidth_percent="0.9" />

        <RelativeLayout
            android:id="@+id/existing_account_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_signUp"
            app:layout_constraintWidth_percent="0.9">

            <TextView
                android:id="@+id/existing_account_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/burbankbigcondensed_bold"
                android:gravity="center_horizontal"
                android:text="@string/already_have_an_account"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/login_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/existing_account_text"
                android:fontFamily="@font/burbankbigcondensed_bold"
                android:gravity="center_horizontal"
                android:onClick="onLoginClick"
                android:text="@string/click_here_to_login"
                android:textColor="#FF4446D6"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
